--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -280,6 +280,7 @@
 
           <div class="e-table-container e-mt-40">
             <table class="e-table">
+              <caption>Type descriptions and when to use</caption>
               <thead>
                 <tr>
                   <th scope="col">Type</th>
@@ -292,7 +293,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <th><b>Global</b></th>
+                  <th scope="row"><strong>Global</strong></th>
                   <td>System or product level alerts and not specific to an user action.</td>
                   <td>High</td>
                   <td>Informative, negative, warning</td>
@@ -300,7 +301,7 @@
                   <td>Permanent or closable</td>
                 </tr>
                 <tr>
-                  <th><b>Local</b></th>
+                  <th scope="row"><strong>Local</strong></th>
                   <td>
                     Related to the content of the page. Correct a problem. It can be in response to an user
                     operation.
@@ -311,7 +312,7 @@
                   <td>Permanent</td>
                 </tr>
                 <tr>
-                  <th><b>Toast</b></th>
+                  <th scope="row"><strong>Toast</strong></th>
                   <td>Specific to an user operation. Informational - brief feedback about an operation.</td>
                   <td>Low</td>
                   <td>Informative and positive</td>
