--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -279,8 +279,7 @@
           </div>
 
           <div class="e-table-container e-mt-40">
-            <table class="e-table">
-              <caption>Type descriptions and when to use</caption>
+            <table class="e-table" aria-label="Type descriptions and when to use">
               <thead>
                 <tr>
                   <th scope="col">Type</th>
