--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.scss
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.scss
@@ -13,6 +13,12 @@
   }
 }
 
+.breadcrumb-levels {
+  width: 50%;
+  @include breakpoint-up(Mobile) {
+    width: 75%;
+  }
+}
 .ceg-container {
   display: flex;
   flex-direction: column;
