--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -33,28 +33,36 @@
   <app-component-section [sectionTitle]="'Type'">
     <ng-container ngProjectAs="sectionContent">
       <div class="e-w-100 alert-type-container-desktop">
-        <img class="e-w-100" src="./../../../../assets/alert/alert-types-desktop.svg" />
+        <img
+          alt="Alert types - Global, local and toast"
+          class="e-w-100"
+          src="./../../../../assets/alert/alert-types-desktop.svg"
+        />
       </div>
       <div class="alert-type-container">
         <div class="alert-type-item">
           <div class="e-title-caps">Global</div>
           <div class="type-images">
-            <img src="./../../../../assets/alert/global.svg" />
-            <img src="./../../../../assets/alert/global-mobile.svg" />
+            <img alt="Alert types - Global" src="./../../../../assets/alert/global.svg" />
+            <img alt="Alert types - Global" src="./../../../../assets/alert/global-mobile.svg" />
           </div>
         </div>
         <div class="alert-type-item">
           <div class="e-title-caps">Local</div>
           <div class="type-images">
-            <img src="./../../../../assets/alert/local.svg" />
-            <img src="./../../../../assets/alert/local-mobile.svg" />
+            <img alt="Alert types - Local" src="./../../../../assets/alert/local.svg" />
+            <img alt="Alert types - Local" src="./../../../../assets/alert/local-mobile.svg" />
           </div>
         </div>
         <div class="alert-type-item">
           <div class="e-title-caps">Toast</div>
           <div class="type-images">
-            <img src="./../../../../assets/alert/toast.svg" class="e-mr-n8" />
-            <img src="./../../../../assets/alert/toast-mobile.svg" class="e-mr-n8" />
+            <img alt="Alert types - Toast" src="./../../../../assets/alert/toast.svg" class="e-mr-n8" />
+            <img
+              alt="Alert types - Toast"
+              src="./../../../../assets/alert/toast-mobile.svg"
+              class="e-mr-n8"
+            />
           </div>
         </div>
       </div>
