--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
@@ -21,12 +21,20 @@
           besides the current page are a link. The breadcrumb is hidden until you have two levels (no
           breadcrumb are visible on the homepage).
           <div class="breadcrumb-levels">
-            <img class="e-mt-16" src="./../../../../assets/breadcrumb/levels.svg" />
+            <img
+              alt="breadcrumb-levels on desktop"
+              class="e-mt-16"
+              src="./../../../../assets/breadcrumb/levels.svg"
+            />
           </div>
 
           <div class="e-mt-40">On mobile you only get the closest parent.</div>
           <div class="breadcrumb-levels">
-            <img class="e-mt-16" src="./../../../../assets/breadcrumb/levels-mobile.svg" />
+            <img
+              alt="breadcrumb-levels on mobile"
+              class="e-mt-16"
+              src="./../../../../assets/breadcrumb/levels-mobile.svg"
+            />
           </div>
         </ng-container>
       </app-component-subsection>
