Spacing - doc uptdate

--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -531,26 +531,35 @@
             We have defined a guide to help you choose the correct spacing. These are not rules so exceptions
             may occur. Spacing will also be used differently depending on which device you are on.
           </div>
-          <app-component-subsubsection [sectionTitle]="'8px - 32px'">
+          <app-component-subsubsection [sectionTitle]="'Related elements (8px - 32px)'">
             <ng-container ngProjectAs="sectionContent">
-              Used for spacing between related elements or inside a component. Example:
+              For spacing between
+              <strong>related elements</strong>
+              or inside a component use spacing between 8px and 32px.
+              <h4 class="e-title-caps e-mt-32">Example:</h4>
               <ul class="e-list">
                 <li>Padding inside card, table, form etc.</li>
-                <li>Padding between typography, related input-fields, filter options etc.</li>
+                <li>Margin between typography, related input-fields, filter options etc.</li>
               </ul>
             </ng-container>
           </app-component-subsubsection>
-          <app-component-subsubsection [sectionTitle]="'40px - 72px'">
+          <app-component-subsubsection [sectionTitle]="'Unrelated elements (40px - 72px)'">
             <ng-container ngProjectAs="sectionContent">
-              Used for spacing between unrelated elements and defines the layout.
+              For spacing between
+              <strong>unrelated elements</strong>
+              and defines the layout use spacing between 40px and 72px.
+              <h4 class="e-title-caps e-mt-32">Example:</h4>
               <ul class="e-list">
                 <li>Margin between cards, tables etc.</li>
               </ul>
             </ng-container>
           </app-component-subsubsection>
-          <app-component-subsubsection [sectionTitle]="'80px - 112px'">
+          <app-component-subsubsection [sectionTitle]="'Sections (80px - 112px)'">
             <ng-container ngProjectAs="sectionContent">
-              Used for spacing between unrelated sections and is more used by external websites.
+              For spacing between different
+              <strong>sections</strong>
+              use spacing between 80px and 112px. This is used by external websites more often.
+              <h4 class="e-title-caps e-mt-32">Example:</h4>
               <ul class="e-list">
                 <li>Margin between different sections vertically</li>
               </ul>
