--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -32,30 +32,86 @@
   <!--TYPE-->
   <app-component-section [sectionTitle]="'Type'">
     <ng-container ngProjectAs="sectionContent">
+      <div class="e-w-100 alert-type-container-desktop">
+        <img
+          alt="Alert types - Global, local and toast"
+          class="e-w-100"
+          src="./../../../../assets/alert/alert-types-desktop.svg"
+        />
+      </div>
       <div class="alert-type-container">
         <div class="alert-type-item">
           <div class="e-title-caps">Global</div>
           <div class="type-images">
-            <img src="./../../../../assets/alert/global.svg" />
-            <img src="./../../../../assets/alert/global-mobile.svg" />
+            <img alt="Alert types - Global" src="./../../../../assets/alert/global.svg" />
+            <img alt="Alert types - Global" src="./../../../../assets/alert/global-mobile.svg" />
           </div>
         </div>
         <div class="alert-type-item">
           <div class="e-title-caps">Local</div>
           <div class="type-images">
-            <img src="./../../../../assets/alert/local.svg" />
-            <img src="./../../../../assets/alert/local-mobile.svg" />
+            <img alt="Alert types - Local" src="./../../../../assets/alert/local.svg" />
+            <img alt="Alert types - Local" src="./../../../../assets/alert/local-mobile.svg" />
           </div>
         </div>
         <div class="alert-type-item">
           <div class="e-title-caps">Toast</div>
           <div class="type-images">
-            <img src="./../../../../assets/alert/toast.svg" class="e-mr-n8" />
-            <img src="./../../../../assets/alert/toast-mobile.svg" class="e-mr-n8" />
+            <img alt="Alert types - Toast" src="./../../../../assets/alert/toast.svg" class="e-mr-n8" />
+            <img
+              alt="Alert types - Toast"
+              src="./../../../../assets/alert/toast-mobile.svg"
+              class="e-mr-n8"
+            />
           </div>
         </div>
       </div>
 
+      <div class="e-table-container e-mt-40">
+        <table class="e-table" aria-label="Type descriptions and when to use">
+          <thead>
+            <tr>
+              <th scope="col">Type</th>
+              <th scope="col">When to use</th>
+              <th scope="col">Urgency</th>
+              <th scope="col">Skins</th>
+              <th scope="col">Position / Location</th>
+              <th scope="col">Duration</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row"><strong>Global</strong></th>
+              <td>System or product level alerts and not specific to an user action.</td>
+              <td>High</td>
+              <td>Informative, negative, warning</td>
+              <td>Full-width strip above the header. Visible on the entire application.</td>
+              <td>Permanent or closable</td>
+            </tr>
+            <tr>
+              <th scope="row"><strong>Local</strong></th>
+              <td>
+                Related to the content of the page. Correct a problem. It can be in response to an user
+                operation.
+              </td>
+              <td>Medium</td>
+              <td>Informative, negative, warning</td>
+              <td>Next to where the action occurred. Only visible on the current page.</td>
+              <td>Permanent</td>
+            </tr>
+            <tr>
+              <th scope="row"><strong>Toast</strong></th>
+              <td>Specific to an user operation. Informational - brief feedback about an operation.</td>
+              <td>Low</td>
+              <td>Informative and positive</td>
+              <td>
+                Above all content - top right corner (Mobile: Bottom center) Only visible on the current page.
+              </td>
+              <td>Disappears after some seconds</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       <app-component-subsection [sectionTitle]="'Global Alert'">
         <ng-container ngProjectAs="sectionContent">
           Global alert is in most cases initiated by the application or system, but can also be used when an
@@ -186,7 +242,7 @@
     </ng-container>
   </app-component-section>
 
-  <!--STATUSES-->
+  <!--STATUS-->
   <app-component-section [sectionTitle]="'Status'">
     <ng-container ngProjectAs="sectionContent">
       The status of an alert helps to communicate the information and the severity of the alert. Each status
