--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
@@ -15,10 +15,40 @@
   <app-component-section [sectionTitle]="'Usage'">
     <ng-container ngProjectAs="sectionContent">
       <app-when-to-use [whens]="does" [whenNots]="donts"></app-when-to-use>
+      <app-component-subsection [sectionTitle]="'Levels'">
+        <ng-container ngProjectAs="sectionContent">
+          The breadcrumb should start with home (landing page) and end with the current page. All pages
+          besides the current page are a link. The breadcrumb is hidden until you have two levels (no
+          breadcrumb are visible on the homepage).
+          <div class="breadcrumb-levels">
+            <img
+              alt="breadcrumb-levels on desktop"
+              class="e-mt-16"
+              src="./../../../../assets/breadcrumb/levels.svg"
+            />
+          </div>
+
+          <div class="e-mt-40">On mobile you only get the closest parent.</div>
+          <div class="breadcrumb-levels">
+            <img
+              alt="breadcrumb-levels on mobile"
+              class="e-mt-16"
+              src="./../../../../assets/breadcrumb/levels-mobile.svg"
+            />
+          </div>
+        </ng-container>
+      </app-component-subsection>
+      <app-component-subsection [sectionTitle]="'Breadcrumb vs backlink'">
+        <ng-container ngProjectAs="sectionContent">
+          Breadcrumb is a great way to reveal the user’s location and makes it easier to navigate and find
+          what they are looking for. But it’s not necessary to use breadcrumbs for single-level pages with no
+          more than one parent category. Backlink can then be used to navigate the user back to home.
+        </ng-container>
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
-  <!-- USAGE -->
+  <!--IMPLEMENTATION-->
   <app-component-section [sectionTitle]="'Implementation'">
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Routing'">
