--- a/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
@@ -76,6 +76,15 @@
   <app-component-section [sectionTitle]="'Usage'">
     <ng-container ngProjectAs="sectionContent">
       <app-when-to-use [whens]="does" [whenNots]="donts"></app-when-to-use>
+
+      <app-component-subsection [sectionTitle]="'Validation'">
+        <ng-container ngProjectAs="sectionContent">
+          Read about
+          <a class="e-link e-link--inline" [routerLink]="['/patterns/validations']">
+            input validation and behaviors here.
+          </a>
+        </ng-container>
+      </app-component-subsection>
     </ng-container>
   </app-component-section>
 
