Internal header closing on click outside

--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -112,6 +112,107 @@
           </tbody>
         </table>
       </div>
+
+      <table class="e-table-mobile e-mt-40">
+        <thead>
+          <tr>
+            <th class="e-table-mobile__cell" scope="col">Type</th>
+            <th class="e-table-mobile__cell" scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th class="e-table-mobile__cell" scope="col">Global</th>
+            <th class="e-table-mobile__cell" scope="col"></th>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">When to use</th>
+            <td class="e-table-mobile__cell">
+              System or product level alerts and not specific to an user action.
+            </td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Urgency</th>
+            <td class="e-table-mobile__cell">High</td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Skins</th>
+            <td class="e-table-mobile__cell">Informative, negative, warning</td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Position / Location</th>
+            <td class="e-table-mobile__cell">
+              Full-width strip above the header. Visible on the entire application.
+            </td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Duration</th>
+            <td class="e-table-mobile__cell">Permanent or closable</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <th class="e-table-mobile__cell" scope="col">Local</th>
+            <th class="e-table-mobile__cell" scope="col"></th>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">When to use</th>
+            <td class="e-table-mobile__cell">
+              Related to the content of the page. Correct a problem. It can be in response to an user
+              operation.
+            </td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Urgency</th>
+            <td class="e-table-mobile__cell">Medium</td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Skins</th>
+            <td class="e-table-mobile__cell">Informative, negative, warning</td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Position / Location</th>
+            <td class="e-table-mobile__cell">
+              Next to where the action occurred. Only visible on the current page.
+            </td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Duration</th>
+            <td class="e-table-mobile__cell">Permanent</td>
+          </tr>
+        </tbody>
+        <tbody>
+          <tr>
+            <th class="e-table-mobile__cell" scope="col">Toast</th>
+            <th class="e-table-mobile__cell" scope="col"></th>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">When to use</th>
+            <td class="e-table-mobile__cell">
+              Specific to an user operation. Informational - brief feedback about an operation.
+            </td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Urgency</th>
+            <td class="e-table-mobile__cell">Low</td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Skins</th>
+            <td class="e-table-mobile__cell">Informative and positive</td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Position / Location</th>
+            <td class="e-table-mobile__cell">
+              Above all content - top right corner (Mobile: Bottom center) Only visible on the current page.
+            </td>
+          </tr>
+          <tr>
+            <th class="e-table-mobile__cell" scope="row">Duration</th>
+            <td class="e-table-mobile__cell">Disappears after some seconds</td>
+          </tr>
+        </tbody>
+      </table>
+
       <app-component-subsection [sectionTitle]="'Global Alert'">
         <ng-container ngProjectAs="sectionContent">
           Global alert is in most cases initiated by the application or system, but can also be used when an
