--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.scss
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.scss
@@ -6,6 +6,18 @@
     display: block;
   }
 }
+.e-table-mobile {
+  display: none;
+  @include breakpoint-up(Mobile) {
+    display: block;
+  }
+}
+.e-table-container {
+  display: block;
+  @include breakpoint-up(Mobile) {
+    display: none;
+  }
+}
 .alert-type-container {
   display: flex;
   justify-content: space-between;
