--- a/packages/web/src/app/doc-pages/other-pages/utilities-doc/utilities-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/utilities-doc/utilities-doc.component.html
@@ -46,9 +46,7 @@
       <div class="e-bg-grey-10 e-my-48" style="width: 100%; height: 1px"></div>
 
       <div class="utilityContainer">
-        <div class="rowTitle e-title-xs elvis-anchor elvis-anchor-title">
-          <a class="e-link e-link--lg" [routerLink]="['/brand/shadow']" fragment="Usage">Shadow</a>
-        </div>
+        <div class="rowTitle e-title-xs elvis-anchor elvis-anchor-title">Shadow</div>
         <div class="e-text-description" style="width: 100%">
           <div class="tableRow">
             <span class="class">
