--- a/packages/web/src/app/shell/header/header.component.html
+++ b/packages/web/src/app/shell/header/header.component.html
@@ -148,9 +148,7 @@
               </a>
               <div class="e-header__top-bar-desktop__app-menu">
                 <div
-                  class="
-                    e-header__top-bar-desktop__app-menu-item e-header__top-bar-desktop__app-menu-item--active
-                  "
+                  class="e-header__top-bar-desktop__app-menu-item e-header__top-bar-desktop__app-menu-item--active"
                 >
                   <div class="e-header__top-bar-desktop__app-circle">D</div>
                   <div class="e-header__top-bar-desktop__app-title">DROPS</div>
