--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -113,7 +113,7 @@
         </table>
       </div>
 
-      <table class="e-table-mobile e-mt-40">
+      <table class="e-table-mobile e-mt-40" aria-label="Type descriptions and when to use">
         <thead>
           <tr>
             <th class="e-table-mobile__cell" scope="col">Type</th>
