--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
@@ -531,6 +531,13 @@
               ></app-component-properties-table>
             </ng-container>
           </app-component-section>
+
+          <!--CHANGELOG-->
+          <app-component-section [sectionTitle]="'Changelog'">
+            <ng-container ngProjectAs="sectionContent">
+              <app-component-changelog [componentData]="componentData"></app-component-changelog>
+            </ng-container>
+          </app-component-section>
         </ng-container>
       </app-component-subsubsection>
     </ng-container>
