--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -132,30 +132,22 @@ $grey-05: #f4f4f4;
     margin-top: 16px;
   }
 
-  &.ewc-popover--list .ewc-popover__content {
-    padding: 0;
-  }
-  &.ewc-popover--list-divider .ewc-popover__content {
-    .ewc-popover__list-group:not(:last-of-type) {
-      border-bottom: 1px solid $grey-10;
-    }
-  }
-
   // List
   &.ewc-popover--list .ewc-popover__content .ewc-popover__list {
     display: flex;
     flex-direction: column;
     min-width: 216px;
+    box-sizing: border-box;
 
     & > button,
     & > a,
     .ewc-popover__list-group > button,
     .ewc-popover__list-group > a {
+      width: 100%;
       border: none;
       padding: 10px 16px;
       background: white;
       cursor: pointer;
-      width: calc(100% - 32px);
 
       display: flex;
       align-items: center;
@@ -196,6 +188,25 @@ $grey-05: #f4f4f4;
         color: black;
 
         margin: 20px 16px 4px 16px;
+      }
+    }
+  }
+  &.ewc-popover--list .ewc-popover__content {
+    padding: 0;
+  }
+  &.ewc-popover--list-divider .ewc-popover__content {
+    .ewc-popover__list-group:not(:last-of-type) {
+      border-bottom: 1px solid $grey-10;
+    }
+  }
+  &.ewc-popover--list.ewc-popover--list-selection .ewc-popover__content .ewc-popover__list {
+    & > button,
+    & > a,
+    .ewc-popover__list-group > button,
+    .ewc-popover__list-group > a {
+      padding: 10px 16px 10px 48px;
+      i {
+        margin-left: -32px;
       }
     }
   }
