--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -113,6 +113,7 @@
         </table>
       </div>
 
+      <!--Table replacing the original on mobile-->
       <table class="e-table-mobile e-mt-40" aria-label="Type descriptions and when to use">
         <thead>
           <tr>
